@@ -22,4 +22,19 @@ class BackupSchedulerTest < ActiveSupport::TestCase
 
     assert_equal "automatic", Backup.last.backup_type
   end
+
+  test "#execute should not schedule a backup when the server is down" do
+    app = apps(:example)
+    app.server.update(status: "down")
+
+    assert_no_difference "app.backups.count" do
+      BackupScheduler.new(app).execute(type: :automatic)
+    end
+
+    app.server.update(status: "up")
+
+    assert_difference "app.backups.count" do
+      BackupScheduler.new(app).execute(type: :automatic)
+    end
+  end
 end
